--- a/src/Pages/Index.cshtml
+++ b/src/Pages/Index.cshtml
@@ -5,6 +5,8 @@
     ViewData["Title"] = "Home page";
 }
 
+<h1>The C Sharp Investigators</h1>
+
 @(await Html.RenderComponentAsync<ProductList>(RenderMode.ServerPrerendered))
 
 <script src="_framework/blazor.server.js"></script>
