Updated code to render the NeighborhoodList Razor component

--- a/src/Pages/Index.cshtml
+++ b/src/Pages/Index.cshtml
@@ -7,6 +7,7 @@
 
 <h1>The C Sharp Investigators</h1>
 
-@(await Html.RenderComponentAsync<ProductList>(RenderMode.ServerPrerendered))
+@(await Html.RenderComponentAsync<NeighborhoodList>(RenderMode.ServerPrerendered))
+
 
 <script src="_framework/blazor.server.js"></script>
