Added a short description to all the neighborhoods

--- a/src/Components/NeighborhoodList.razor
+++ b/src/Components/NeighborhoodList.razor
@@ -14,8 +14,10 @@
             <h5 class="card-title">@neighborhood.Name</h5>
         </div>
         <div class="card-footer">
-            <small class="text-muted"><button
-              data-toggle="modal" data-target="#productModal" class="btn btn-primary">More Info</button>
+            <small>@neighborhood.shortDesc</small> <br/>
+            <small class="text-muted" style="display: block">
+                <button
+                    data-toggle="modal" data-target="#productModal" class="btn btn-primary">More Info</button>
             </small>
         </div>
     </div>
