ADD: Image folder and placeholder images

--- a/src/Pages/AboutUs.cshtml
+++ b/src/Pages/AboutUs.cshtml
@@ -1,8 +1,10 @@
 ﻿@page
+@using ContosoCrafts.WebSite.Components
 @model AboutUsModel
 @{
     ViewData["Title"] = "About Us";
 }
 <h1>@ViewData["Title"]</h1>
+<h2>Mission statement</h2>
 
-<p>TBD</p>
+<script src="_framework/blazor.server.js"></script>
