--- a/src/Pages/AboutUs.cshtml
+++ b/src/Pages/AboutUs.cshtml
@@ -7,4 +7,7 @@
 <h1>@ViewData["Title"]</h1>
 <h2>Mission statement</h2>
 
+<!--Have page render AboutUs component-->
+@(await Html.RenderComponentAsync<AboutUs>(RenderMode.ServerPrerendered))
+
 <script src="_framework/blazor.server.js"></script>
