ADD: rudimentary CSS to "About US" page. ADD: target property to make LinkedIn page open in a new tab.

--- a/src/Components/AboutUs.razor
+++ b/src/Components/AboutUs.razor
@@ -3,7 +3,7 @@
     <div class="team-member">
         <div class="member-name">
             <h1>Narissa Tsuboi</h1>
-            <a href="https://www.linkedin.com/in/tsuboin/"><img src="./image/linkin_logo.jpg" width="20" /></a>
+            <a href="https://www.linkedin.com/in/tsuboin/" target="blank"><img src="./image/linkin_logo.jpg" width="20" /></a>
         </div>
         <img src="./image/Lion.jpg" alt="lion" height="300">
         <h2>Bio goes here</h2>
@@ -12,7 +12,7 @@
     <div class="team-member">
         <div class="member-name">
             <h1>Nirmalya Ghosh</h1>
-            <a href="https://www.linkedin.com/in/nirmalyagh/"><img src="./image/linkin_logo.jpg" width="20" /></a>
+            <a href="https://www.linkedin.com/in/nirmalyagh/" target="blank"><img src="./image/linkin_logo.jpg" width="20" /></a>
         </div>
         <img src="./image/Lion2.jpg" alt="lion" height="300">
         <h2>Bio goes here</h2>
@@ -21,7 +21,7 @@
     <div class="team-member">
         <div class="member-name">
             <h1>Nuli Bang</h1>
-            <a href="https://www.linkedin.com/in/nuli-claire-bang/"><img src="./image/linkin_logo.jpg" width="20" /></a>
+            <a href="https://www.linkedin.com/in/nuli-claire-bang/" target="blank"><img src="./image/linkin_logo.jpg" width="20" /></a>
         </div>
         <img src="./image/Otter.jpg" alt="lion" height="300">
         <h2>Bio goes here</h2>
@@ -30,7 +30,7 @@
     <div class="team-member">
         <div class="member-name">
             <h1>Evan Marshall</h1>
-            <a href="https://www.linkedin.com/in/evan-marshall-87594a163/"><img src="./image/linkin_logo.jpg" width="20" /></a>
+            <a href="https://www.linkedin.com/in/evan-marshall-87594a163/" target="blank"><img src="./image/linkin_logo.jpg" width="20" /></a>
         </div>
         <img src="./image/GoldenRetriever.jpg" alt="lion" height="300">
         <h2>Bio goes here</h2>
@@ -39,7 +39,7 @@
     <div class="team-member">
         <div class="member-name">
             <h1>Zi Wang</h1>
-            <a href="https://www.linkedin.com/in/zw4-code/"><img src="./image/linkin_logo.jpg" width="20" /></a>
+            <a href="https://www.linkedin.com/in/zw4-code/" target="blank"><img src="./image/linkin_logo.jpg" width="20" /></a>
         </div>
         <img src="./image/Beaver.jpg" alt="lion" height="300">
         <h2>Bio goes here</h2>
