--- a/src/Pages/Shared/_Layout.cshtml
+++ b/src/Pages/Shared/_Layout.cshtml
@@ -40,7 +40,7 @@
 
     <footer class="border-top footer text-muted bg-footer">
         <div class="container">
-            &copy; 2019 - ContosoCrafts.WebSite - <a asp-area="" asp-page="/Privacy">Privacy</a>
+            &copy; 2022 - The C Sharp Investigators - <a asp-area="" asp-page="/Privacy">Privacy</a>
         </div>
     </footer>
 
