ADD: Simple message to dummy Neighborhood page Neighborhood.razor

--- a/src/Components/Neighborhood.razor
+++ b/src/Components/Neighborhood.razor
@@ -1,6 +1,13 @@
 ﻿<!-- Component for individual Neighborhood -->
-<h3>Neighborhood</h3>
+<h3>Dummy Neighborhood</h3>
+
+<div>
+    <h4>Individual neighborhood page with description, image, comments</h4>
+</div>
+
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
 @code {
 
 }
+
