ADD: Statement to include Neighborhood razor file when rendering in Neighborhood.cshtml

--- a/src/Pages/Neighborhood.cshtml
+++ b/src/Pages/Neighborhood.cshtml
@@ -1,9 +1,13 @@
 ﻿@page
-@using ContosoCrafts.WebSite.Components 
+@using ContosoCrafts.WebSite.Components
 @model NeighborhoodModel
 @{
-    ViewData["Title"] = "Neighborhood Page"; // TODO: Update to autofill selected Neighborhood                                         
+    ViewData["Title"] = "Neighborhood Page"; // TODO: Update to autofill selected Neighborhood
 }
 
 <h1>@ViewData["Title"]</h1>
 
+<!--Render Neighborhood component-->
+@(await Html.RenderComponentAsync<Neighborhood>(RenderMode.ServerPrerendered))
+
+<script src="_framework/blazor.server.js"></script>
