Removed unneccesary variable in NeighborhoodService.cs

--- a/src/Components/NeighborhoodList.razor
+++ b/src/Components/NeighborhoodList.razor
@@ -13,11 +13,12 @@
         <div class="card-body">
             <h5 class="card-title">@neighborhood.Name</h5>
         </div>
-        <div class="card-footer">
+        <div class="card-footer"> 
             <small>@neighborhood.shortDesc</small> <br/>
             <small class="text-muted" style="display: block">
-                <button
-                    data-toggle="modal" data-target="#productModal" class="btn btn-primary">More Info</button>
+                <a href="/Neighborhood/@neighborhood.Name"> <!-- Goes to corresponding page -->
+                    <button data-toggle="modal" data-target="#productModal" class="btn btn-primary">More Info</button>
+                </a>
             </small>
         </div>
     </div>
