Updated button href path for button in NeighborhoodList.razor

--- a/src/Components/NeighborhoodList.razor
+++ b/src/Components/NeighborhoodList.razor
@@ -16,7 +16,7 @@
         <div class="card-footer"> 
             <small>@neighborhood.shortDesc</small> <br/>
             <small class="text-muted" style="display: block">
-                <a href="/Neighborhood/@neighborhood.Name"> <!-- Goes to corresponding page -->
+                <a href="/@neighborhood.Name"> <!-- Goes to corresponding page -->
                     <button data-toggle="modal" data-target="#productModal" class="btn btn-primary">More Info</button>
                 </a>
             </small>
