REFACTOR: Changed solution name, removed references to Contoso

--- a/src/Components/NeighborhoodList.razor
+++ b/src/Components/NeighborhoodList.razor
@@ -1,6 +1,6 @@
 ﻿@using Microsoft.AspNetCore.Components.Web
-@using ContosoCrafts.WebSite.Models
-@using ContosoCrafts.WebSite.Services
+@using LetsGoSEA.WebSite.Models
+@using LetsGoSEA.WebSite.Services
 @inject NeighborhoodService _neighborhoodService
 <h3>Neighborhoods of Seattle</h3>
 
