--- a/src/Pages/Index.cshtml
+++ b/src/Pages/Index.cshtml
@@ -1,5 +1,5 @@
 ﻿@page
-@using ContosoCrafts.WebSite.Components
+@using LetsGoSEA.WebSite.Components
 @model IndexModel
 @{
     ViewData["Title"] = "Home page";
