--- a/src/Pages/Northgate.cshtml
+++ b/src/Pages/Northgate.cshtml
@@ -1,5 +1,5 @@
 ﻿@page
-@using ContosoCrafts.WebSite.Components
+@using LetsGoSEA.WebSite.Components
 @model NeighborhoodModel
 @{
     ViewData["Title"] = "Neighborhood Page"; // TODO: Update to autofill selected Neighborhood
