--- a/src/Pages/AboutUs.cshtml
+++ b/src/Pages/AboutUs.cshtml
@@ -1,5 +1,5 @@
 ﻿@page
-@using ContosoCrafts.WebSite.Components
+@using LetsGoSEA.WebSite.Components
 @model AboutUsModel
 @{
     ViewData["Title"] = "About Us";
