--- a/src/Pages/_ViewImports.cshtml
+++ b/src/Pages/_ViewImports.cshtml
@@ -1,3 +1,3 @@
-@using ContosoCrafts.WebSite
-@namespace ContosoCrafts.WebSite.Pages
+@using LetsGoSEA.WebSite
+@namespace LetsGoSEA.WebSite.Pages
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
