Refactored namespace to match our project name - LetsGoSEA

--- a/src/Components/Neighborhood.razor
+++ b/src/Components/Neighborhood.razor
@@ -1,13 +1,11 @@
-﻿<!-- Component for individual Neighborhood -->
-<h3>Dummy Neighborhood</h3>
+﻿@using Microsoft.AspNetCore.Components.Web
+@using LetsGoSEA.WebSite.Models
+@using LetsGoSEA.WebSite.Services
+@inject NeighborhoodService _neighborhoodService
 
-<div>
-    <h4>Individual neighborhood page with description, image, comments</h4>
-</div>
+
 
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-
 @code {
-
+    
 }
-
