Update Title in Northgate.cshtml

--- a/src/Pages/Northgate.cshtml
+++ b/src/Pages/Northgate.cshtml
@@ -1,8 +1,8 @@
 ﻿@page
 @using LetsGoSEA.WebSite.Components
-@model NeighborhoodModel
+@model Neighborhood
 @{
-    ViewData["Title"] = "Neighborhood Page"; // TODO: Update to autofill selected Neighborhood
+    ViewData["Title"] = "Northgate"; 
 }
 
 <h1>@ViewData["Title"]</h1>
