Update @model in Belltown.cshtml

--- a/src/Pages/Belltown.cshtml
+++ b/src/Pages/Belltown.cshtml
@@ -1,6 +1,6 @@
 ﻿@page
 @using LetsGoSEA.WebSite.Components
-@model NeighborhoodModel
+@model Neighborhood
 @{
     ViewData["Title"] = "Belltown"; 
 }
