Updated Title to Queen Anne

--- a/src/Pages/QueenAnne.cshtml
+++ b/src/Pages/QueenAnne.cshtml
@@ -2,7 +2,7 @@
 @using LetsGoSEA.WebSite.Components
 @model Neighborhood
 @{
-    ViewData["Title"] = "Belltown"; 
+    ViewData["Title"] = "Queene Anne"; 
 }
 
 <h1>@ViewData["Title"]</h1>
