Added AddDelimeter fxn to NeighborhoodList.razor

--- a/src/Components/NeighborhoodList.razor
+++ b/src/Components/NeighborhoodList.razor
@@ -5,28 +5,32 @@
 <h3>Neighborhoods of Seattle</h3>
 
 <div class="card-columns">
-@foreach (var neighborhood in _neighborhoodService.GetNeighborhoods())
-{
-    <div class="card">
-        <div class="card-img" style="background-image: url('@neighborhood.Image');">
+    @foreach (var neighborhood in _neighborhoodService.GetNeighborhoods())
+    {
+        <div class="card">
+            <div class="card-img" style="background-image: url('@neighborhood.Image');">
+            </div>
+            <div class="card-body">
+                <h5 class="card-title">@neighborhood.Name</h5>
+            </div>
+            <div class="card-footer">
+                <small>@neighborhood.shortDesc</small> <br />
+                <small class="text-muted" style="display: block">
+                    <a href="/@neighborhood.Name">
+                        <button data-toggle="modal" data-target="#productModal" class="btn btn-primary">More Info</button>
+                    </a>
+                </small>
+            </div>
         </div>
-        <div class="card-body">
-            <h5 class="card-title">@neighborhood.Name</h5>
-        </div>
-        <div class="card-footer"> 
-            <small>@neighborhood.shortDesc</small> <br/>
-            <small class="text-muted" style="display: block">
-                <a href="/@neighborhood.Name"> <!-- Goes to corresponding page -->
-                    <button data-toggle="modal" data-target="#productModal" class="btn btn-primary">More Info</button>
-                </a>
-            </small>
-        </div>
-    </div>
-}
+    }
 </div>
 
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
 @code {
-    
+    static string AddDelimiter(string name)
+    {
+        return name.Replace(" ", "_");
+    }
 }
+`
