Delete conflicted copy of Neighborhood.razor.

--- a/src/Components/Neighborhood.razor
+++ b/src/Components/Neighborhood.razor
@@ -3,6 +3,12 @@
 @using LetsGoSEA.WebSite.Services
 @inject NeighborhoodService _neighborhoodService
 
+<div class="temp data">
+    <p>
+        @Neighbo
+    </p>
+</div>
+
 
 
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
