Updated navbar links

--- a/src/Pages/Shared/_Layout.cshtml
+++ b/src/Pages/Shared/_Layout.cshtml
@@ -20,13 +20,23 @@
                 </button>
                 <div class="navbar-collapse collapse d-sm-inline-flex flex-sm-row-reverse">
                     <ul class="navbar-nav flex-grow-1">
+                        <!--Added Homepage Link-->
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-page="/Privacy">Privacy</a>
+                            <a class="nav-link text-dark" href="/">Home</a>
+                        </li>
+                        <!--Added Neighborhoods Link-->
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" href="/Neighborhoods">Explore</a>
                         </li>
                         <!--Added About Us Link-->
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-page="/AboutUs">About Us</a>
                         </li>
+
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-page="/Privacy">Privacy</a>
+                        </li>
+                        
                     </ul>
                 </div>
             </div>
