--- a/src/wwwroot/css/site.css
+++ b/src/wwwroot/css/site.css
@@ -41,7 +41,7 @@ for details on configuring this project to bundle and minify static web assets. 
     box-shadow: 0 10px 20px rgba(37,33,82,.12), 0 4px 8px rgba(37,33,82,.06);
 }
 .card-footer {
-    background: #fbfafd;
+    background: #84A98C;
 }
 
 
