ADD: New color to primary button

--- a/src/wwwroot/css/site.css
+++ b/src/wwwroot/css/site.css
@@ -60,7 +60,7 @@ a {
 
 .btn-primary {
     color: #fff;
-    background-color: #252152;
+    background-color: #52489C;
     border-color: #252152;
 }
 .btn-primary:hover {
