ADD: New color for card body

--- a/src/wwwroot/css/site.css
+++ b/src/wwwroot/css/site.css
@@ -16,7 +16,7 @@ for details on configuring this project to bundle and minify static web assets. 
 .card-columns .card-body {
     height: 100px;
     font-family: 'Nunito', sans-serif;
-    background: #fbfafd;
+    background: #CAD2C5;
 }
 
 .card-columns .card-img {
