ADD: New color for nav bar

--- a/src/wwwroot/css/site.css
+++ b/src/wwwroot/css/site.css
@@ -132,10 +132,10 @@ ul {
 }
 /*Backgrounds*/
 .bg-navbar {
-    background: -webkit-linear-gradient(110deg, #e9a8a6 60%, #252152 60%);
-    background: -o-linear-gradient(110deg, #e9a8a6 60%, #252152 60%);
-    background: -moz-linear-gradient(110deg, #e9a8a6 60%, #252152 60%);
-    background: linear-gradient(110deg, #e9a8a6 60%, #252152 60%);
+    background: -webkit-linear-gradient(110deg, #59C3C3 60%, #52489C 60%);
+    background: -o-linear-gradient(110deg, #59C3C3 60%, #52489C 60%);
+    background: -moz-linear-gradient(110deg, #59C3C3 60%, #52489C 60%);
+    background: linear-gradient(110deg, #59C3C3 60%, #52489C 60%);
 }
 .bg-footer {
     background: -webkit-linear-gradient(110deg, #252152 60%, #e9a8a6 60%);
