ADD: New color to footer

--- a/src/wwwroot/css/site.css
+++ b/src/wwwroot/css/site.css
@@ -138,10 +138,10 @@ ul {
     background: linear-gradient(110deg, #59C3C3 60%, #52489C 60%);
 }
 .bg-footer {
-    background: -webkit-linear-gradient(110deg, #252152 60%, #e9a8a6 60%);
-    background: -o-linear-gradient(110deg, #252152 60%, #e9a8a6 60%);
-    background: -moz-linear-gradient(110deg, #252152 60%, #e9a8a6 60%);
-    background: linear-gradient(110deg, #252152 60%, #e9a8a6 60%);
+    background: -webkit-linear-gradient(110deg, #52489C 60%, #59C3C3 60%);
+    background: -o-linear-gradient(110deg, #52489C 60%, #59C3C3 60%);
+    background: -moz-linear-gradient(110deg, #52489C 60%, #59C3C3 60%);
+    background: linear-gradient(110deg, #52489C 60%, #59C3C3 60%);
 }
 
 /* About Us Page
