--- a/src/Views/Neighborhoods/Index.cshtml
+++ b/src/Views/Neighborhoods/Index.cshtml
@@ -6,6 +6,7 @@
     Layout = "~/Pages/Shared/_Layout.cshtml";
 }
 
+<!--Index page of neighborhoods to show the cards of them!-->
 <h1>Explore the beautiful neighborhoods of Seattle!</h1>
 
 
