Updated the tab title format of neighborhoods detail page to show each of their name

--- a/src/Views/Neighborhoods/GetNeighborhood.cshtml
+++ b/src/Views/Neighborhoods/GetNeighborhood.cshtml
@@ -2,7 +2,7 @@
 
 
 @{
-    ViewData["Title"] = "LetsGoSEA | @Model.Name";
+    ViewData["Title"] = "LetsGoSEA | "+ @Model.Name;
     Layout = "~/Pages/Shared/_Layout.cshtml";
 }
 
