--- a/src/Pages/Shared/_Layout.cshtml
+++ b/src/Pages/Shared/_Layout.cshtml
@@ -30,11 +30,11 @@
                         </li>
                         <!--Added About Us Link-->
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-page="/AboutUs">About Us</a>
+                            <a class="nav-link text-dark" href="/AboutUs">About Us</a>
                         </li>
 
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-page="/Privacy">Privacy</a>
+                            <a class="nav-link text-dark" href="/Privacy">Privacy</a>
                         </li>
                         
                     </ul>
