Update variable name to follow coding guidelines

--- a/src/Views/Neighborhoods/Index.cshtml
+++ b/src/Views/Neighborhoods/Index.cshtml
@@ -20,7 +20,7 @@
                 <h5 class="card-title">@neighborhood.Name</h5>
             </div>
             <div class="card-footer">
-                <small>@neighborhood.shortDesc</small> <br />
+                <small>@neighborhood.ShortDesc</small> <br />
                 <small class="text-muted" style="display: block">
                     <a class="btn btn-primary" role="button" href="/Neighborhoods/@neighborhood.Name">Explore More</a>
                 </small>
