Update variable name to follow coding guidelines

--- a/src/Views/Neighborhoods/GetNeighborhood.cshtml
+++ b/src/Views/Neighborhoods/GetNeighborhood.cshtml
@@ -15,6 +15,6 @@
     </h1>
     <img src="@Model.Image" class="img-fluid" alt="Responsive Image of @Model.Name" />
     <hr class="my-4" />
-    <p>@Model.shortDesc</p>
+    <p>@Model.ShortDesc</p>
 </div>
 
