Added owl carousel css file route to src/Views/AboutUs/Index.cshtml

--- a/src/Views/AboutUs/Index.cshtml
+++ b/src/Views/AboutUs/Index.cshtml
@@ -14,7 +14,7 @@
         <div class="team-member">
             <div class="member-name">
                 <h1>@teamMember.Name</h1>
-                <a href=@teamMember.LinkedIn target="blank"><img src=~/image/linkin_logo.jpg  width="20" /></a>
+                <a href=@teamMember.LinkedIn target="blank"><img src=~/image/linkin_logo.jpg width="20" /></a>
             </div>
             <img src=@teamMember.Image alt="image" height="300">
             <h2>@teamMember.Bio</h2>
@@ -23,3 +23,4 @@
 </div>
 
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+<link rel="stylesheet" type="text/css" href="~/css/owl.carousel.min.css">
