Added comment about the owl slider to src/Views/AboutUs/Index.cshtml

--- a/src/Views/AboutUs/Index.cshtml
+++ b/src/Views/AboutUs/Index.cshtml
@@ -24,6 +24,7 @@
 
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
+<!--Owl card slider-->
 
 <link rel="stylesheet" type="text/css" href="~/css/owl.carousel.min.css">
 <section id="slider" class="pt-5">
