--- a/src/Pages/Shared/_Layout.cshtml
+++ b/src/Pages/Shared/_Layout.cshtml
@@ -36,7 +36,7 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" href="/Privacy">Privacy</a>
                         </li>
-                        
+
                     </ul>
                 </div>
             </div>
@@ -56,6 +56,7 @@
 
     <script src="~/lib/jquery/dist/jquery.js"></script>
     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.js"></script>
+    <script src="js/owl.carousel.min.js"></script>
     <script src="~/js/site.js" asp-append-version="true"></script>
 
     @RenderSection("Scripts", required: false)
