Updated comment in /css/site.css file

--- a/src/wwwroot/css/site.css
+++ b/src/wwwroot/css/site.css
@@ -102,7 +102,7 @@ button.accept-policy {
   line-height: inherit;
 }
 
-/* Sticky footer styles
+/* Home Page
 -------------------------------------------------- */
 html {
   position: relative;
