Renamed Homepage button to Lets Go Sea in /Pages/Index.cshtml

--- a/src/Pages/Index.cshtml
+++ b/src/Pages/Index.cshtml
@@ -5,14 +5,14 @@
 }
 
 <!--Index page of 'Lets Go SEA' !-->
-<h1>The C Sharp Investigators</h1>
+<h1>Lets Go SEA</h1>
 <video autoplay muted loop preload="auto" id="myVideo">
     <source src="~/image/LetsGoSEA_Homepage.mov" type="video/mp4" />
 </video>
 <div class="jumbotron" style="background:rgba(72,74,71,.45); background-size:300px 400px; border-radius: 25px">
     <p class="lead">Welcome to Lets Go SEA, the one-stop site to explore the beautiful neighborhoods of Seattle.</p>
     <hr class="my-4" border-0/>
-    <a class="btn btn-primary btn-lg" role="button" asp-controller="Neighborhoods" asp-action="Index">Explore the neighborhoods</a>
+    <a class="btn btn-primary btn-lg" role="button" asp-controller="Neighborhoods" asp-action="Index">Lets Go Sea!</a>
 
 </div>
 
