Increased the Homepage Button size in /Pages/Index.cshtml

--- a/src/wwwroot/css/site.css
+++ b/src/wwwroot/css/site.css
@@ -124,6 +124,11 @@ h1 {
 ul {
     font-family: 'Nunito', sans-serif;
 }
+
+.btn-xl {
+    font-size: 30px;
+}
+
 .footer {
     position: absolute;
     bottom: 0;
