Added group description in Views/AboutUs/Index.cshtml

--- a/src/Views/AboutUs/Index.cshtml
+++ b/src/Views/AboutUs/Index.cshtml
@@ -9,6 +9,14 @@
 
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
+<p style="font-size:20px; color: #1b6ec2">
+    We are the CSI -- C Sharp Investigators -- from Seattle, Washington! 
+    We are a group of computer science students studying at Seattle University. 
+    With the expanding city population, we decided to build this website to help Seattleites navigate, explore, and 
+    investigate our neighborhoods more easily.  
+    For the computer nerds out there, we built this website using C# and ASP.NET and used the Tableau software to 
+    generate our analytics and visuals. Feel free to connect with us on LinkedIn!  
+</p>
 <!--Owl card slider-->
 
 <link rel="stylesheet" type="text/css" href="~/css/owl.carousel.min.css">
