Modified the font size and color of About Us description in /Views/AboutUs/Index.cshtml

--- a/src/Views/AboutUs/Index.cshtml
+++ b/src/Views/AboutUs/Index.cshtml
@@ -5,13 +5,13 @@
     ViewData["Title"] = "About Us";
     Layout = "~/Pages/Shared/_Layout.cshtml";
 }
-<h1>@ViewData["Title"]</h1>
+<h1 style="text-align:center; font-weight:bold; font-size:30px">@ViewData["Title"]</h1>
+<br>
 
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
-<p style="font-size:20px; color: #1b6ec2">
-    We are the CSI -- C Sharp Investigators -- from Seattle, Washington! 
-    We are a group of computer science students studying at Seattle University. 
+<p style="font-size:20px; color: #84A98C; font-weight:bold; text-align:justify">
+    We are the CSI &ndash;&ndash; C Sharp Investigators &ndash;&ndash; a group of computer science student from Seattle University! <br />
     With the expanding city population, we decided to build this website to help Seattleites navigate, explore, and 
     investigate our neighborhoods more easily.  
     For the computer nerds out there, we built this website using C# and ASP.NET and used the Tableau software to 
