Added member bio to /wwwroot/data/about_us.json and /Views/AboutUs/Index.cshmtl

--- a/src/Views/AboutUs/Index.cshtml
+++ b/src/Views/AboutUs/Index.cshtml
@@ -37,7 +37,7 @@
                                     <a href=@teamMember.LinkedIn target="blank"><img src=~/image/linkin_logo.jpg width="10" !important/></a>
                                     </h1>
                             </div>
-                            <p>@teamMember.Bio</p>
+                            <p class="member-bio">@teamMember.Bio</p>
                         </div>
                     </div>
                 }
