Added comment to _Layout.cshtml

--- a/src/Pages/Shared/_Layout.cshtml
+++ b/src/Pages/Shared/_Layout.cshtml
@@ -1,4 +1,6 @@
-﻿<!DOCTYPE html>
+﻿<!-- _Layout.cshtml, site layout Page-->
+
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="utf-8" />
@@ -20,15 +22,15 @@
                 </button>
                 <div class="navbar-collapse collapse d-sm-inline-flex flex-sm-row-reverse">
                     <ul class="navbar-nav flex-grow-1">
-                        <!--Added Homepage Link-->
+                        <!-- Homepage Link-->
                         <li class="nav-item">
                             <a class="nav-link text-dark" href="/">Home</a>
                         </li>
-                        <!--Added Neighborhoods Link-->
+                        <!-- Neighborhoods Link-->
                         <li class="nav-item">
                             <a class="nav-link text-dark" href="/Neighborhoods">Explore</a>
                         </li>
-                        <!--Added About Us Link-->
+                        <!-- About Us Link-->
                         <li class="nav-item">
                             <a class="nav-link text-dark" href="/AboutUs">About Us</a>
                         </li>
