--- a/src/Pages/_ViewImports.cshtml
+++ b/src/Pages/_ViewImports.cshtml
@@ -1,3 +1,4 @@
+<!-- _ViewImports.cshtml, imports applied to all Views -->
 @using LetsGoSEA.WebSite
 @namespace LetsGoSEA.WebSite.Pages
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
