--- a/src/Pages/Error.cshtml
+++ b/src/Pages/Error.cshtml
@@ -1,4 +1,5 @@
-﻿@page
+﻿<!-- Error.cshtml, contains error messages to render if request cannot be completed-->
+@page
 @model ErrorModel
 @{
     ViewData["Title"] = "Error";
