Moved html comment below @page to fix error in Error.cshtml

--- a/src/Pages/Error.cshtml
+++ b/src/Pages/Error.cshtml
@@ -1,9 +1,10 @@
-﻿<!-- Error.cshtml, contains error messages to render if request cannot be completed-->
-@page
+﻿@page
 @model ErrorModel
 @{
     ViewData["Title"] = "Error";
 }
+
+<!-- Error.cshtml, contains error messages to render if request cannot be completed-->
 
 <h1 class="text-danger">Error.</h1>
 <h2 class="text-danger">An error occurred while processing your request.</h2>
