Added comment to Views/AboutUs/Index.cshtml

--- a/src/Views/AboutUs/Index.cshtml
+++ b/src/Views/AboutUs/Index.cshtml
@@ -1,6 +1,8 @@
 ﻿@using LetsGoSEA.WebSite.Services
 @inject AboutUsService _aboutUsService
 
+<!-- Index.cshtml, About Us Razor File-->
+
 @{
     ViewData["Title"] = "About Us";
     Layout = "~/Pages/Shared/_Layout.cshtml";
