Added product description in AboutUs/Index.cshtml

--- a/src/Views/AboutUs/Index.cshtml
+++ b/src/Views/AboutUs/Index.cshtml
@@ -1,6 +1,5 @@
 ﻿@using LetsGoSEA.WebSite.Services
 @inject AboutUsService _aboutUsService
-
 <!-- Index.cshtml, About Us Razor File-->
 
 @{
@@ -19,8 +18,23 @@
     For the computer nerds out there, we built this website using C# and ASP.NET and used the Tableau software to
     generate our analytics and visuals. Feel free to connect with us on LinkedIn!
 </p>
-<!--Owl card slider-->
+<div>
+    <p style="font-size:20px; color: #84A98C; font-weight:bold; text-align:justify">
+        LetsGoSea serves to provide the current and future Seattleites with a digital platform to connect to the heart of their community,
+        to explore the surrounding neighborhoods, and to make better decisions about where and how they will live, work, and spread their leisure time in the Emerald City.
 
+        Simply click on a neighborhood card to lift its mysterious veil.
+        Inside each card, you will see more pictures of the neighborhood, an overall happiness rating, and a crime index.
+        You can zoom in and out of the map to locate the areas’ most popular eateries, parks, and tourist attractions.
+        To get a more balanced view, you can also check out the analytics and visualizations we have prepared for you about various local issues,
+        including cost of living, real estate metrics, crime statistics, and more.
+
+        Have something to say? Feel free to rate and comment on your experience about a particular neighborhood.
+        You may share your likes, dislikes, observations, discoveries, concerns...anything you want!
+        Are you ready to explore?
+    </p>
+</div>
+<!--Owl card slider-->
 <link rel="stylesheet" type="text/css" href="~/css/owl.carousel.min.css">
 <section id="slider" class="pt-5">
     <div class="container">
